# mRNArchitect-paper

./: .gitignore  Dockerfile.DegScore  Dockerfile.RiboNN  pyproject.toml
docker/DegScore/: main.py  pyproject.toml
notebooks/paper-analysis/: 1 - Parse input.ipynb  2.a - mRNArchitect.ipynb  3.a - Hydrate.ipynb  3.b - DegScore.ipynb  3.c - RiboNN.ipynb  3.d - CSC.ipynb  3.e - Hamming Distance.ipynb  4 - Violin plots.ipynb
notebooks/paper-analysis/.ipynb_checkpoints/: 4 - Violin plots-checkpoint.ipynb
