[project]
name = "mrnarchitect-paper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jupyter>=1.1.1",
    "mrnarchitect",
    "plotnine>=0.15.1",
    "polars>=1.35.2",
]

[tool.uv.sources]
mrnarchitect = { git = "https://github.com/BaseUQ/mRNArchitect", rev = "0.4.5" }
